# bastion-firewall

./: .coverage  .github-issue-popup-focus.md  .gitignore  ARCHITECTURE.md  AUDIT_COMPLETION_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEAN_START_STOP.md  CODE_QUALITY_ANALYSIS.md  CONTRIBUTING.md  DNS_IMPLEMENTATION_PLAN_CORRECTIONS.md  DNS_USERSPACE_IMPLEMENTATION_PLAN.md  DOCS_UPDATE_SUMMARY.md  EXAMPLES.md  FAQ.md  GITHUB_PAGES_SETUP.md  IMPLEMENTATION.md  IMPLEMENTATION_REPORT_2025-12-25.md  INSTALL.md  INSTALLATION.md  LICENSE  MIGRATION_PLAN.md  Makefile  PLAN.md  PRODUCTION_GUIDE.md  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_v2.0.19.md  REQUIREMENTS.md  ROADMAP.md  SECURITY.md  SECURITY_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_BEST_PRACTICES.md  SECURITY_CODE_REVIEW.md  SECURITY_FIXES_COMPLETED.md  SECURITY_SUMMARY.md  (+81 more)
bastion/: __init__.py  config.py  daemon.py  ebpf.py  firewall_core.py  gui.py  gui_manager.py  gui_qt.py  gui_theme.py  icon_manager.py  inbound_firewall.py  log_parser.py  notification.py  root_helper.py  rules.py  service_whitelist.py  startup_validator.py  ttl_cache.py  usb_device.py  usb_gui.py  usb_monitor.py  usb_rules.py  usb_validation.py  utils.py
bastion-rs/: Cargo.toml  EBPF_COMPLETE.md  EBPF_SUCCESS.md  README.md  RUST_REWRITE_PROGRESS.md  STATUS.md  bastion-daemon.service  build.sh  build_ebpf.sh  debug_rules  debug_rules.rs  rescue.sh  rust_log.txt  safety_timer.sh  start_daemon.sh  test_build.sh  test_ebpf.sh  test_interceptor.sh  test_safe.sh
bastion-rs/ebpf/: Cargo.toml
bastion-rs/ebpf/src/: main.rs
bastion-rs/src/: config.rs  dns_snooper.rs  ebpf_loader.rs  gui.rs  ipc.rs  main.rs  proc_parser.rs  process.rs  protocol.rs  rules.rs  whitelist.rs
debian/: bastion-firewall.logrotate
docs/: SECURITY_AUDIT.md  index.html  robots.txt  sitemap.xml
douane/: __init__.py  config.py  daemon.py  gui.py  inbound_firewall.py  rules.py  (+1 more)
(+42 files in other folders)
