[package]
name = "bastion-rs"
version = "2.0.24"
edition = "2021"

[[bin]]
name = "bastion-daemon"
path = "src/main.rs"

[dependencies]
nfq = "0.2"
etherparse = "0.13"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
parking_lot = "0.12"
crossbeam-channel = "0.5"
aya = "0.13"
signal-hook = "0.3"
